[gd_scene load_steps=19 format=2]

[ext_resource path="res://addons/visual-console/components/CommandPalette/CommandSearch.gd" type="Script" id=1]
[ext_resource path="res://addons/visual-console/components/CommandPalette/CommandPane.gd" type="Script" id=3]
[ext_resource path="res://addons/visual-console/components/CommandPalette/CommandPalette.gd" type="Script" id=5]
[ext_resource path="res://addons/visual-console/components/CommandPalette/NavigationPane.gd" type="Script" id=6]
[ext_resource path="res://addons/visual-console/assets/high-res/AnonymousPro-Regular.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://addons/visual-console/assets/magnifying-glass.svg" type="Texture" id=8]

[sub_resource type="StyleBoxFlat" id=25]
content_margin_left = 15.0
content_margin_right = 6.0
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color( 0.239216, 0.196078, 0.270588, 1 )

[sub_resource type="DynamicFont" id=7]
size = 4
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxFlat" id=26]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=20]
content_margin_left = 30.0
content_margin_right = 6.0
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color( 0.239216, 0.196078, 0.270588, 1 )

[sub_resource type="DynamicFont" id=10]
size = 5
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxEmpty" id=11]
content_margin_left = 15.0

[sub_resource type="StyleBoxEmpty" id=23]
content_margin_left = 8.0
content_margin_right = 8.0
content_margin_top = 12.0
content_margin_bottom = 12.0

[sub_resource type="Animation" id=27]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CommandPane:anchor_right")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 2.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CommandPane:anchor_left")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("NavigationPane:anchor_left")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("NavigationPane:anchor_right")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}

[sub_resource type="Animation" id=28]
resource_name = "switch_to_command"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("CommandPane:anchor_left")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( -2, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CommandPane:anchor_right")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( -2, 1 ),
"update": 0,
"values": [ 2.0, 1.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("NavigationPane:anchor_left")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( -2, 1 ),
"update": 0,
"values": [ 0.0, -1.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("NavigationPane:anchor_right")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( -2, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[sub_resource type="Animation" id=30]
resource_name = "switch_to_command_instant"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CommandPane:anchor_left")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CommandPane:anchor_right")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("NavigationPane:anchor_left")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -1.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("NavigationPane:anchor_right")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=29]
resource_name = "switch_to_navigation"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("CommandPane:anchor_left")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CommandPane:anchor_right")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ 1.0, 2.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("NavigationPane:anchor_left")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ -1.0, 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("NavigationPane:anchor_right")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[sub_resource type="Animation" id=31]
resource_name = "switch_to_navigation_instant"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CommandPane:anchor_left")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( -2 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CommandPane:anchor_right")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( -2 ),
"update": 0,
"values": [ 2.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("NavigationPane:anchor_left")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( -2 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("NavigationPane:anchor_right")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( -2 ),
"update": 0,
"values": [ 1.0 ]
}

[node name="CommandPalette" type="Panel"]
anchor_right = 0.3
anchor_bottom = 1.0
rect_clip_content = true
script = ExtResource( 5 )

[node name="NavigationPane" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
script = ExtResource( 6 )

[node name="VBoxContainer" type="VBoxContainer" parent="NavigationPane"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0

[node name="SearchBar" type="LineEdit" parent="NavigationPane/VBoxContainer"]
margin_right = 85.0
margin_bottom = 34.0
custom_styles/read_only = SubResource( 25 )
custom_styles/focus = SubResource( 25 )
custom_styles/normal = SubResource( 25 )
script = ExtResource( 1 )

[node name="MagnifyingGlass" type="TextureRect" parent="NavigationPane/VBoxContainer/SearchBar"]
anchor_bottom = 1.0
margin_left = 6.0
margin_top = 0.2
margin_right = -0.32
margin_bottom = -0.200001
rect_min_size = Vector2( 18, 18 )
texture = ExtResource( 8 )
expand = true
stretch_mode = 6

[node name="Placeholder" type="Label" parent="NavigationPane/VBoxContainer/SearchBar"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
custom_colors/font_color = Color( 1, 1, 1, 0.666667 )
custom_fonts/font = SubResource( 7 )
text = "Search..."
valign = 1

[node name="Panel" type="Panel" parent="NavigationPane/VBoxContainer"]
margin_top = 34.0
margin_right = 85.0
margin_bottom = 38.0
rect_min_size = Vector2( 0, 4 )
custom_styles/panel = SubResource( 26 )

[node name="Listings" type="Tree" parent="NavigationPane/VBoxContainer"]
margin_top = 38.0
margin_right = 85.0
margin_bottom = 160.0
size_flags_vertical = 3
hide_root = true

[node name="CommandPane" type="Control" parent="."]
anchor_left = 1.0
anchor_right = 2.0
anchor_bottom = 1.0
size_flags_horizontal = 3
script = ExtResource( 3 )

[node name="Title" type="Panel" parent="CommandPane"]
anchor_right = 1.0
margin_bottom = 34.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 3
size_flags_vertical = 4
custom_styles/panel = SubResource( 20 )

[node name="Name" type="Label" parent="CommandPane/Title"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 10 )
custom_styles/normal = SubResource( 11 )
text = "Duplicate Window"
align = 1
valign = 1

[node name="Arguments" type="ScrollContainer" parent="CommandPane"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 50.0
margin_bottom = 2.0
custom_styles/bg = SubResource( 23 )
follow_focus = true
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="CommandPane/Arguments"]
margin_left = 8.0
margin_top = 12.0
margin_right = 77.2
margin_bottom = 12.0
size_flags_horizontal = 3
custom_constants/separation = 7

[node name="Buttons" type="HBoxContainer" parent="CommandPane"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -50.0
grow_horizontal = 0
alignment = 2

[node name="Cancel" type="Button" parent="CommandPane/Buttons"]
margin_right = 54.0
margin_bottom = 50.0
size_flags_horizontal = 3
text = "Cancel"

[node name="Submit" type="Button" parent="CommandPane/Buttons"]
margin_left = 58.0
margin_right = 115.0
margin_bottom = 50.0
size_flags_horizontal = 3
text = "Submit"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 27 )
anims/switch_to_command = SubResource( 28 )
anims/switch_to_command_instant = SubResource( 30 )
anims/switch_to_navigation = SubResource( 29 )
anims/switch_to_navigation_instant = SubResource( 31 )

[connection signal="listing_selected" from="NavigationPane" to="." method="on_listing_selected"]
[connection signal="focus_entered" from="NavigationPane/VBoxContainer/SearchBar" to="NavigationPane/VBoxContainer/SearchBar" method="on_focus_entered"]
[connection signal="focus_exited" from="NavigationPane/VBoxContainer/SearchBar" to="NavigationPane/VBoxContainer/SearchBar" method="on_focus_exited"]
[connection signal="text_changed" from="NavigationPane/VBoxContainer/SearchBar" to="NavigationPane" method="on_search_changed"]
[connection signal="text_entered" from="NavigationPane/VBoxContainer/SearchBar" to="NavigationPane" method="on_search_entered"]
[connection signal="item_activated" from="NavigationPane/VBoxContainer/Listings" to="NavigationPane" method="on_listing_activated"]
[connection signal="item_selected" from="NavigationPane/VBoxContainer/Listings" to="NavigationPane" method="on_selection_changed"]
[connection signal="nothing_selected" from="NavigationPane/VBoxContainer/Listings" to="NavigationPane" method="on_selection_changed"]
[connection signal="cancelled" from="CommandPane" to="." method="on_command_cancelled"]
[connection signal="submitted" from="CommandPane" to="." method="execute_command"]
[connection signal="pressed" from="CommandPane/Buttons/Cancel" to="CommandPane" method="on_cancel_pressed"]
[connection signal="pressed" from="CommandPane/Buttons/Submit" to="CommandPane" method="on_submit_pressed"]
